# smart_json

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  smart_json-config.cmake.in
.devcontainer/: Containerfile  devcontainer.json
examples/: CMakeLists.txt  nlohmann.cpp  playground.cpp  property_tree.cpp  showcase.cpp
include/smart_json/: adapter.hpp  camel_case_transformer.hpp  codec.hpp  decode.hpp  decode.inl  encode.hpp  encode.inl  error.hpp  no_transformer.hpp  smart_json.hpp  string_container.hpp
include/smart_json/adapter/: boost_json.hpp  boost_property_tree.hpp  nlohmann_json.hpp
include/smart_json/detail/: do_decode.hpp  do_decode.inl  do_encode.hpp  do_encode.inl  has_access.hpp  has_codec.hpp  is_constexpr_transformer.hpp  is_container.hpp  is_optional.hpp  is_primitive.hpp
tests/: CMakeLists.txt  config.hpp  encode.cpp
